  rewritten to ".".  Thanks Daniel Hahler.

- introduce experimental (not much documented yet) plugin system
  based on pytest's externalized "pluggy" system.
  See tox/hookspecs.py for the current hooks.

- introduce parser.add_testenv_attribute() to register an ini-variable
  for testenv sections.  Can be used from plugins through the 
  tox_add_option hook.


1.9.2
-----------

- backout ability that --force-deps substitutes name/versions in
  requirement files due to various issues.
  This fixes issue228, fixes issue230, fixes issue231
  which popped up with 1.9.1.

1.9.1
-----------

- use a file instead of a pipe for command output in "--result-json".
  Fixes some termination issues with python2.6.

- allow --force-deps to override dependencies in "-r" requirements
  files.  Thanks Sontek for the PR.

- fix issue227: use "-m virtualenv" instead of "-mvirtualenv" to make
  it work with pyrun.  Thanks Marc-Andre Lemburg.


1.9.0
-----------

- fix issue193: Remove ``--pre`` from the default ``install_command``; by
  default tox will now only install final releases from PyPI for unpinned
  dependencies. Use ``pip_pre = true`` in a testenv or the ``--pre``
  command-line option to restore the previous behavior.

- fix issue199: fill resultlog structure ahead of virtualenv creation 

- refine determination if we run from Jenkins, thanks Borge Lanes.

- echo output to stdout when ``--report-json`` is used

- fix issue11: add a ``skip_install`` per-testenv setting which
  prevents the installation of a package. Thanks Julian Krause.

- fix issue124: ignore command exit codes; when a command has a "-" prefix,
  tox will ignore the exit code of that command

- fix issue198: fix broken envlist settings, e.g. {py26,py27}{-lint,}

- fix issue191: lessen factor-use checks


1.8.1
-----------

- fix issue190: allow setenv to be empty.

- allow escaping curly braces with "\".  Thanks Marc Abramowitz for the PR.
